src/test/deca/syntax/valid/created/main_vide.deca
// Description :
//		un main vide
//
// Resultats :
//		Ok


{}
