src/test/deca/syntax/invalid/created/miscellaneous/no_semi_ended_instruction.deca
// Description :
//    manque le point virgule
//
// Resultats :
//		Syntaxe error

{
int i=0
}
